--- a/index.html
+++ b/index.html
@@ -23,13 +23,7 @@
     </nav>
 
     <div class="hero">
-      <video
-        autoplay
-        muted
-        loop
-        playsinline
-        poster="assets/images/placeholder.jpg"
-      >
+      <video autoplay muted loop playsinline poster="assets/images/alpha-2.jpg">
         <source src="assets/videos/hero.mp4" type="video/mp4" />
       </video>
       <div class="hero-content">
