--- a/rotors-of-war/index.html
+++ b/rotors-of-war/index.html
@@ -40,7 +40,7 @@
     </nav>
 
     <div class="container game-preview">
-      <img src="../assets/images/placeholder.jpg" alt="Rotors of War Preview" />
+      <img src="../assets/images/alpha-1.jpg" alt="Rotors of War Preview" />
       <p class="development-status">
         Under active development 2024/2025 and beyond
       </p>
