--- a/rotors-of-war/index.html
+++ b/rotors-of-war/index.html
@@ -32,9 +32,12 @@
           <a href="/godot-plugins/">Godot Plugins</a>
         </div>
         <div class="social-links">
-          <a href="https://discord.gg/your-discord" target="_blank">Discord</a>
-          <a href="https://twitter.com/your-twitter" target="_blank">Twitter</a>
-          <a href="https://twitch.tv/your-twitch" target="_blank">Twitch</a>
+          <!-- <a href="https://discord.gg/your-discord" target="_blank">Discord</a> -->
+          <a href="https://x.com/jamonholmgren" target="_blank">𝕏</a>
+          <a href="https://twitch.tv/jamonholmgren" target="_blank">Twitch</a>
+          <a href="https://www.youtube.com/@JamminGameDev" target="_blank"
+            >YouTube</a
+          >
         </div>
       </div>
     </nav>
