--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jammin Games - Combat Helicopter Games & Godot Plugins</title>
+    <title>
+      Jammin Games - home for Jamon Holmgren's Game Development Projects
+    </title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
@@ -31,7 +33,7 @@
       </video>
       <div class="hero-content">
         <h1>Jammin Games</h1>
-        <p>Combat helicopter simulation and Godot game development</p>
+        <p>Jamon Holmgren's Game Development Projects</p>
       </div>
     </div>
   </body>
