--- a/godot-plugins/index.html
+++ b/godot-plugins/index.html
@@ -3,52 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Godot Plugins - Jammin Games</title>
+    <title>Free Godot Plugins - Jammin Games</title>
     <link rel="stylesheet" href="../css/styles.css" />
-    <style>
-      .plugins-header {
-        margin: 120px 0 40px;
-        text-align: center;
-      }
-      .plugin-card {
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-      }
-      .plugin-card img {
-        width: 100%;
-        height: 200px;
-        object-fit: cover;
-        border-radius: 8px;
-        margin-bottom: 1rem;
-      }
-      .plugin-card h3 {
-        display: flex;
-        align-items: center;
-        gap: 0.5rem;
-      }
-      .plugin-description {
-        flex-grow: 1;
-      }
-      .plugin-footer {
-        margin-top: auto;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-      }
-      .plugin-links {
-        display: flex;
-        gap: 1rem;
-      }
-      .plugin-links a {
-        color: var(--primary-color);
-        text-decoration: none;
-        font-size: 0.9rem;
-      }
-      .plugin-links a:hover {
-        text-decoration: underline;
-      }
-    </style>
   </head>
   <body>
     <nav>
@@ -73,8 +29,9 @@
       <div class="plugins-header">
         <h1>Godot Plugins</h1>
         <p>
-          A collection of high-quality free plugins for Godot 4.x, from Jammin
-          Games
+          A collection of high-quality free plugins for the game engine
+          <a href="https://godotengine.org" target="_blank">Godot 4</a>, from
+          Jammin Games
         </p>
       </div>
 
