--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <a href="/">Home</a>
           <a href="/rotors-of-war/">Rotors of War</a>
           <a href="/godot-plugins/">Godot Plugins</a>
+          <a href="/about/">About</a>
         </div>
         <div class="social-links">
           <!-- <a href="https://discord.gg/your-discord" target="_blank">Discord</a> -->
