--- a/rotors-of-war/index.html
+++ b/rotors-of-war/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Rotors of War is a combat helicopter game in development by Jammin Games. It will feature immersive helicopter combat, co-op multiplayer, dynamic campaigns, and much more!"
     />
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css?v=20241231" />
     <style>
       .game-preview {
         max-width: 800px;
