--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>
       Jammin Games - home for Jamon Holmgren's Game Development Projects
     </title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css?v=20241231" />
   </head>
   <body>
     <nav>
