add icons to plugins

--- a/godot-plugins/index.html
+++ b/godot-plugins/index.html
@@ -42,7 +42,13 @@
             src="../assets/images/jammin-ghost.gif"
             alt="Ghost Collision Shapes Demo"
           />
-          <h3>Jammin Ghost Collision Shapes</h3>
+          <h3>
+            <img
+              src="../assets/images/jammin-ghost-icon.jpg"
+              alt="Ghost Collision Shapes Icon"
+            />
+            Jammin Ghost Collisions
+          </h3>
           <div class="plugin-description">
             <p>
               Visualize collision shapes in the editor with ghostly meshes that
@@ -86,7 +92,13 @@
 
         <div class="plugin-card">
           <img src="../assets/images/jammin-fps.jpg" alt="Jammin FPS Counter" />
-          <h3>Jammin FPS</h3>
+          <h3>
+            <img
+              src="../assets/images/jammin-fps-icon.jpg"
+              alt="FPS Counter Icon"
+            />
+            Jammin FPS
+          </h3>
           <div class="plugin-description">
             <p>
               A lightweight, elegant FPS counter that doesn't impact
@@ -123,7 +135,13 @@
             src="../assets/images/jammin-lobby.jpg"
             alt="Jammin Lobby System"
           />
-          <h3>Jammin Lobby</h3>
+          <h3>
+            <img
+              src="../assets/images/jammin-lobby-icon.jpg"
+              alt="Lobby System Icon"
+            />
+            Jammin Lobby
+          </h3>
           <div class="plugin-description">
             <p>
               A sophisticated multiplayer networking system for Godot 4.x.
