--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
     </nav>
 
     <div class="hero">
-      <video autoplay muted loop playsinline poster="assets/images/alpha-2.jpg">
+      <video
+        autoplay
+        muted
+        loop
+        playsinline
+        poster="assets/images/rotors-of-war-splash.jpg"
+      >
         <source src="assets/videos/hero.mp4" type="video/mp4" />
       </video>
       <div class="hero-content">
