--- a/godot-plugins/index.html
+++ b/godot-plugins/index.html
@@ -11,7 +11,7 @@
       <div class="container nav-content">
         <div class="nav-links">
           <a href="/">Home</a>
-          <a href="/rotors-of-war/">Rotors of War</a>
+          <a href="/into-the-dawn/">Into the Dawn</a>
           <a href="/godot-plugins/">Godot Plugins</a>
           <a href="/about/">About</a>
         </div>
