--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="container nav-content">
         <div class="nav-links">
           <a href="/">Home</a>
-          <a href="/rotors-of-war/">Rotors of War</a>
+          <a href="/into-the-dawn/">Into the Dawn</a>
           <a href="/godot-plugins/">Godot Plugins</a>
           <a href="/about/">About</a>
         </div>
@@ -34,7 +34,7 @@
         muted
         loop
         playsinline
-        poster="assets/images/rotors-of-war-splash.jpg"
+        poster="assets/images/into-the-dawn-splash.jpg"
       >
         <source src="assets/videos/hero.mp4" type="video/mp4" />
       </video>
