Add jammin lobby 0.2.0

--- a/godot-plugins/index.html
+++ b/godot-plugins/index.html
@@ -170,6 +170,9 @@
                 target="_blank"
                 >GitHub →</a
               >
+              <a href="/uploads/jammin_lobby-0.2.0.zip" target="_blank"
+                >Download 0.2.0 (Jan 30, 2025) →</a
+              >
             </div>
           </div>
         </div>
