--- a/about/index.html
+++ b/about/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Jamon Holmgren - Jammin Games</title>
+    <link rel="canonical" href="https://jammin.games/about" />
     <link rel="stylesheet" href="../css/styles.css?v=20241231" />
   </head>
   <body>
@@ -11,12 +12,13 @@
       <div class="container nav-content">
         <div class="nav-links">
           <a href="/">Home</a>
-          <a href="/into-the-dawn/">Into the Dawn</a>
-          <a href="/godot-plugins/">Godot Plugins</a>
-          <a href="/about/">About</a>
+          <a href="/into-the-dawn">Into the Dawn</a>
+          <a href="/godot-plugins">Godot Plugins</a>
+          <a href="/about">About</a>
+          <a href="/faq">FAQ</a>
         </div>
         <div class="social-links">
-          <a href="https://x.com/jamonholmgren" target="_blank">𝕏</a>
+          <a href="https://x.com/jammingames" target="_blank">𝕏</a>
           <a href="https://twitch.tv/jamonholmgren" target="_blank">Twitch</a>
           <a href="https://www.youtube.com/@JamminGameDev" target="_blank"
             >YouTube</a
@@ -79,10 +81,10 @@
           <h2>Tech Stack & Tools</h2>
           <p>For game development, here's what I'm currently using:</p>
           <div class="tech-stack">
-            <span class="tech-item">Godot 4.3</span>
+            <span class="tech-item">Godot 4.4</span>
             <span class="tech-item">GDScript</span>
             <span class="tech-item">Blender</span>
-            <span class="tech-item">Cursor AI</span>
+            <span class="tech-item">Cursor</span>
             <span class="tech-item">Git</span>
             <span class="tech-item">Discord</span>
             <span class="tech-item">Audacity</span>
@@ -97,7 +99,10 @@
             on my Kubota tractor, spending time with my family, or working on
             various open source projects. I occasionally stream on Twitch and
             create YouTube content. You'll find me most active on
-            <a href="https://x.com/jamonholmgren" target="_blank">𝕏 / Twitter</a
+            <a href="https://x.com/jammingames" target="_blank">𝕏 / Twitter</a>
+            and
+            <a href="https://linkedin.com/in/jamonholmgren" target="_blank"
+              >LinkedIn</a
             >.
           </p>
           <p>
