--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>
       Jammin Games - home for Jamon Holmgren's Game Development Projects
     </title>
+    <link rel="canonical" href="https://jammin.games" />
     <link rel="stylesheet" href="css/styles.css?v=20250102" />
   </head>
   <body>
@@ -13,13 +14,14 @@
       <div class="container nav-content">
         <div class="nav-links">
           <a href="/">Home</a>
-          <a href="/into-the-dawn/">Into the Dawn</a>
-          <a href="/godot-plugins/">Godot Plugins</a>
-          <a href="/about/">About</a>
+          <a href="/into-the-dawn">Into the Dawn</a>
+          <a href="/godot-plugins">Godot Plugins</a>
+          <a href="/about">About</a>
+          <a href="/faq">FAQ</a>
         </div>
         <div class="social-links">
           <!-- <a href="https://discord.gg/your-discord" target="_blank">Discord</a> -->
-          <a href="https://x.com/jamonholmgren" target="_blank">𝕏</a>
+          <a href="https://x.com/jammingames" target="_blank">𝕏</a>
           <a href="https://twitch.tv/jamonholmgren" target="_blank">Twitch</a>
           <a href="https://www.youtube.com/@JamminGameDev" target="_blank"
             >YouTube</a
@@ -36,7 +38,7 @@
         playsinline
         poster="assets/images/into-the-dawn-splash.jpg"
       >
-        <source src="assets/videos/hero.mp4" type="video/mp4" />
+        <!-- <source src="assets/videos/hero.mp4" type="video/mp4" /> -->
       </video>
       <div class="hero-content">
         <h1>Jammin Games</h1>
