--- a/godot-plugins/index.html
+++ b/godot-plugins/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Free Godot Plugins - Jammin Games</title>
+    <link rel="canonical" href="https://jammin.games/godot-plugins" />
     <link rel="stylesheet" href="../css/styles.css?v=20241231" />
   </head>
   <body>
@@ -11,13 +12,14 @@
       <div class="container nav-content">
         <div class="nav-links">
           <a href="/">Home</a>
-          <a href="/into-the-dawn/">Into the Dawn</a>
-          <a href="/godot-plugins/">Godot Plugins</a>
-          <a href="/about/">About</a>
+          <a href="/into-the-dawn">Into the Dawn</a>
+          <a href="/godot-plugins">Godot Plugins</a>
+          <a href="/about">About</a>
+          <a href="/faq">FAQ</a>
         </div>
         <div class="social-links">
           <!-- <a href="https://discord.gg/your-discord" target="_blank">Discord</a> -->
-          <a href="https://x.com/jamonholmgren" target="_blank">𝕏</a>
+          <a href="https://x.com/jammingames" target="_blank">𝕏</a>
           <a href="https://twitch.tv/jamonholmgren" target="_blank">Twitch</a>
           <a href="https://www.youtube.com/@JamminGameDev" target="_blank"
             >YouTube</a
